--- a/.github/workflows/docker-build-basic.yml
+++ b/.github/workflows/docker-build-basic.yml
@@ -22,7 +22,7 @@ jobs:
           tag-semver: |
             {{version}}
             {{major}}.{{minor}}
-
+#? Requires secret for actions: https://github.com/settings/tokens/new?scopes=write:packages,delete:packages
       - name: Login to GitHub Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
