--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,29 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.server2.rule=Path(`/server2{path:.*}`)"
+
+  immich-machine-learning:
+    # env_file: .env
+    container_name: immich_machine_learning
+    #? For hardware acceleration, add one of -[armnn, cuda, openvino] to the image tag.
+    #* Example tag: ${IMMICH_VERSION:-release}-cuda
+    image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION:-release}
+    # extends: #? uncomment this section for hardware acceleration - see https://immich.app/docs/features/ml-hardware-acceleration
+    #*   file: hwaccel.ml.yml
+    #*   service: cpu #? set to one of [armnn, cuda, openvino, openvino-wsl] for accelerated inference - use the `-wsl` version for WSL2 where applicable
+    volumes:
+      - model-cache:/cache
+    labels:
+      # - "com.centurylinklabs.watchtower.enable=false"
+      # - "com.centurylinklabs.watchtower.monitor-only=true"
+      # - "com.centurylinklabs.watchtower.depends-on=immich_server"
+      - "traefik.enable=true"
+      - "traefik.http.routers.immich_machine_learning.rule=Path(`/immich_ml_remote{path:.*}`)"
+    restart: always
+    ports: #? host port: container port
+      - 80:3003
+    # expose:
+    #   - 3003
+
+volumes:
+  model-cache:
