--- a/.github/workflows/docker-build-advanced.yml
+++ b/.github/workflows/docker-build-advanced.yml
@@ -22,7 +22,7 @@ jobs:
           tag-semver: |
             {{version}}
             {{major}}.{{minor}}
-
+#! Requires PAT
       - name: Login to GitHub Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
