--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,10 +49,10 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.immich_machine_learning.rule=Path(`/immich_ml_remote{path:.*}`)"
     # restart: always
-    # ports: #? host port: container port
-      # - 80:3003
-    expose:
-      - 3003
+    ports: #? host port: container port
+      - 3003:3003
+    # expose:
+    #   - 3003
     # extends: #? uncomment this section for hardware acceleration
     #*   file: hwaccel.ml.yml #? - see: https://immich.app/docs/features/ml-hardware-acceleration
     #*   service: cpu #? set to oneOf( -armnn, -cuda, -openvino, -openvino-wsl) for accelerated inference -- use the `-wsl` version for WSL2 where applicable
