--- a/.github/workflows/docker-build-basic.yml
+++ b/.github/workflows/docker-build-basic.yml
@@ -13,16 +13,17 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-
+      - name: Set up environment variables
+        run: echo $GITHUB_ENV
       - name: Generate docker image labels and tags
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images:  ghcr.io/jasonkolodziej/immich-ml-remote
+          images: ghcr.io/jasonkolodziej/immich-ml-remote
           tag-semver: |
             {{version}}
             {{major}}.{{minor}}
-#? Requires secret for actions: https://github.com/settings/tokens/new?scopes=write:packages,delete:packages
+      #? Requires secret for actions: https://github.com/settings/tokens/new?scopes=write:packages,delete:packages
       - name: Login to GitHub Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
@@ -37,3 +38,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
+          build-args: |
+            HW_ACCELERATOR=${{ env.HW_ACCELERATOR }}
